--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<div id="root"></div>
+<center>
+	<div id="root"></div>
+</center>
 
 <script src="https://cdn.jsdelivr.net/npm/brynja/cdn/brynja.js"></script>
 <script>
