--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 Math.random.between = (min, max) => Math.floor(Math.random()*(max-min+1)+min);
 
 const parseString = (inputString) => {
-	const regex = /(\d*)d(\d+)(?:\s*\+\s*(\d+))?(?:\s|\+)/gi;
+	const regex = /(\d*)d(\d+)(?:\s*\+\s*(\d+))?(?:\s|\+|$)/gi;
   const matches = [...inputString.matchAll(regex)];
   
   const dice = matches.map(match => {
