--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script src="https://unpkg.com/@olian/dice-roller@1.1.2/src/index.js"></script>
   <script>
 const term = new Terminal();
-const fitAddon = new new FitAddon.FitAddon();
+const fitAddon = new FitAddon.FitAddon();
 term.loadAddon(fitAddon);
 term.open(document.getElementById('terminal'));
 fitAddon.fit();
